[package]
name = "microtime"
version = "0.3.0"
authors = ["Cody P Schafer <dev@codyps.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/microtime"
include = ["Cargo.toml", "src/**/*.rs", "tests/**/*.rs", "README.md"]
description = "Time tracked in microseconds"

[features]
std = []

[dependencies]
